--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+AutomationPracticeForm1Xpath
+AutomationPracticeForm1Xpath
 
 # Package Files #
 *.jar
