--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     testImplementation(
             "com.codeborne:selenide:6.5.1",
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.slf4j:slf4j-simple:1.7.36"
     )
 }
 
