--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,38 @@
 plugins {
-    id 'java-library'
+    id 'java'
+    id 'io.qameta.allure' version '2.10.0'
 }
 
 repositories {
     mavenCentral()
 }
 
+group 'qa.guru.allure'
+version '1.0-SNAPSHOT'
+
+repositories {
+    mavenCentral()
+}
+
+allure {
+    report {
+        version.set("2.18.1")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.18.1")
+            }
+        }
+    }
+}
+
+
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.5.1",
+            'com.codeborne:selenide:6.6.3',
+            'io.qameta.allure:allure-selenide:2.18.1',
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "com.github.javafaker:javafaker:1.0.2",
             "org.slf4j:slf4j-simple:1.7.36"
