--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,41 @@ dependencies {
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion"
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:1.0.12"
     )
 }
 
 tasks.withType(Test) {
     useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task properties_JenkinsTest(type: Test) {
+    useJUnitPlatform{
+        includeTags "JenkinsTest"
+    }
+}
+
+task hello_test(type: Test) {
+    useJUnitPlatform{
+        includeTags "hello"
+    }
+}
+
+task owner_test(type: Test) {
+    useJUnitPlatform{
+        includeTags "owner"
+    }
 }
