--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,9 @@ task properties_JenkinsTest(type: Test) {
         includeTags "JenkinsTest"
     }
 }
+
+task owner_test(type: Test) {
+    useJUnitPlatform{
+        includeTags "owner"
+    }
+}
