--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'io.qameta.allure' version '2.10.0'
 }
 
@@ -7,20 +7,15 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.18.1",
-    selenideVersion = "6.6.4",
-    junitVersion = "5.8.2",
-    slf4jVersion = '1.7.36'
-
 allure {
     report {
-        version.set("2.18.1")
+        version.set('2.18.1')
     }
     adapter {
         aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set("2.18.1")
+                adapterVersion.set('2.18.1')
             }
         }
     }
@@ -28,24 +23,23 @@ allure {
 
 dependencies {
     testImplementation(
+            'org.junit.jupiter:junit-jupiter:5.8.2',
+            "org.aeonbits.owner:owner:1.0.12",
+            'com.codeborne:selenide:6.6.3',
+            'org.jetbrains:annotations:23.0.0',
+            "org.assertj:assertj-core:3.23.1",
             'com.github.javafaker:javafaker:1.0.2',
-            'org.slf4j:slf4j-simple:1.7.36',
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            "org.aeonbits.owner:owner:1.0.12"
-    )
+            "io.qameta.allure:allure-selenide:2.18.1",
+            'org.slf4j:slf4j-simple:1.7.36')
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform()
-
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
@@ -54,17 +48,6 @@ tasks.withType(Test) {
     }
 }
 
-
-task prop_test(type: Test) {
-    useJUnitPlatform {
-        includeTags "test1"
-    }
-}
-task form_test(type: Test) {
-    useJUnitPlatform {
-        includeTags "formTest"
-    }
-}
 task smokeTests(type: Test) {
     useJUnitPlatform {
         includeTags "smoke"
