--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ dependencies {
             "org.assertj:assertj-core:3.23.1",
             'com.github.javafaker:javafaker:1.0.2',
             "io.qameta.allure:allure-selenide:2.18.1",
-            'org.slf4j:slf4j-simple:1.7.36')
+            'org.slf4j:slf4j-simple:1.7.36',
+            'org.seleniumhq.selenium:selenium-java:4.2.1',
+            'io.github.bonigarcia:webdrivermanager:5.2.1'
+    )
 }
 
 tasks.withType(JavaCompile) {
